--- a/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
+++ b/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-EB63024;Initial Catalog=ChatApplication;Integrated Security=True"
+    "DefaultConnection": "Data Source=DACHIEU\\SQLEXPRESS;Initial Catalog=ChatApplication;Integrated Security=True"
   },
   "ChatDatabaseSettings": {
     "UsersCollectionName": "ApplicationUser",
