--- a/Tsoft.ChatService.Frontend/package.json
+++ b/Tsoft.ChatService.Frontend/package.json
@@ -50,6 +50,10 @@
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/list": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
+    "@ngrx/effects": "^10.1.1",
+    "@ngrx/entity": "^10.1.1",
+    "@ngrx/store": "^10.1.1",
+    "@ngrx/store-devtools": "^10.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-charts": "^12.0.1",
