--- a/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
+++ b/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
@@ -3,12 +3,12 @@
   //  "DefaultConnection": "Data Source=DACHIEU\\SQLEXPRESS;Initial Catalog=ChatApplication;Integrated Security=True"
   //},
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-EB63024;Initial Catalog=ChatApplication;Integrated Security=True"
+    "DefaultConnection": "Data Source=DACHIEU\\SQLEXPRESS;Initial Catalog=ChatApplication;Integrated Security=True"
   },
   "ChatDatabaseSettings": {
-    "UsersCollectionName": "ApplicationUser",
-    "ConversationsCollectionName": "Room",
-    "MessagesCollectionName": "Message",
+    "UsersCollectionName": "Users",
+    "ConversationsCollectionName": "Conversations",
+    "MessagesCollectionName": "Messages",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "ChatSignalR"
   },
