--- a/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
+++ b/Tsoft.ChatService/Tsoft.ChatService/appsettings.json
@@ -3,7 +3,7 @@
   //  "DefaultConnection": "Data Source=DACHIEU\\SQLEXPRESS;Initial Catalog=ChatApplication;Integrated Security=True"
   //},
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-EB63024;Initial Catalog=ChatApplication;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-EB63024;Initial Catalog=ChatSignal;Integrated Security=True"
   },
   "ChatDatabaseSettings": {
     "UsersCollectionName": "ApplicationUser",
