add new project v2

--- a/Tsoft.ChatService.Frontend.V2/angular.json
+++ b/Tsoft.ChatService.Frontend.V2/angular.json
@@ -165,6 +165,7 @@
   },
   "defaultProject": "ng-alain",
   "cli": {
-    "analytics": "910d1cee-4219-40d9-8527-1561a93db09c"
+    "analytics": "910d1cee-4219-40d9-8527-1561a93db09c",
+    "defaultCollection": "@ngrx/schematics"
   }
 }
