--- a/Tsoft.ChatService.Frontend.V2/package.json
+++ b/Tsoft.ChatService.Frontend.V2/package.json
@@ -50,17 +50,20 @@
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/list": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
-    "@ngrx/effects": "^10.1.1",
-    "@ngrx/entity": "^10.1.1",
-    "@ngrx/store": "^10.1.1",
-    "@ngrx/store-devtools": "^10.1.1",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/entity": "^10.1.2",
+    "@ngrx/schematics": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@schematics/angular": "^11.0.5",
     "@swimlane/ngx-charts": "^12.0.1",
     "ajv": "^6.10.2",
     "angular-baidu-maps": "^3.0.0",
     "element-closest": "^3.0.1",
     "file-saver": "^2.0.2",
+    "guid-typescript": "^1.0.9",
     "js-base64": "^2.5.1",
     "masonry-layout": "^4.2.2",
     "ng-zorro-antd": "^8.5.2",
