--- a/Tsoft.ChatService.Backend.V2/Tsoft.ChatService/appsettings.json
+++ b/Tsoft.ChatService.Backend.V2/Tsoft.ChatService/appsettings.json
@@ -28,5 +28,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailConfiguration": {
+    "Enable": false,
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "testdemo20201219@gmail.com",
+    "SmtpPassword": "Vy19122020"
+  },
+  "CacheConfig": {
+    "EnableCache": "true" // true or false to enable or disable cache 
+  }
 }
