--- a/Tsoft.ChatService.Backend.V2/Tsoft.ChatService/Tsoft.ChatService.csproj
+++ b/Tsoft.ChatService.Backend.V2/Tsoft.ChatService/Tsoft.ChatService.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="MongoDB.Driver" Version="2.11.5" />
 		<PackageReference Include="TSoft.Framework.ApiUtils" Version="1.1.4" />
 		<PackageReference Include="TSoft.Framework.Authentication" Version="1.1.7" />
+		<PackageReference Include="Tsoft.Framework.CacheMemory" Version="1.0.0" />
 		<PackageReference Include="Tsoft.Framework.Common" Version="1.0.0" />
 		<PackageReference Include="TSoft.Framework.DB" Version="1.0.4" />
 	</ItemGroup>
